tests/A2/reject/badPrint.ul
void main(){
    char[2] c;

    print c;
}